--- a/slides/package.json
+++ b/slides/package.json
@@ -31,6 +31,7 @@
     "md5-file": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "recursive-copy": "^2.0.11",
+    "replace-in-file": "^6.3.5",
     "watch": "^1.0.2"
   },
   "type": "module"
